--- a/application/templates/macros_simple_form.html
+++ b/application/templates/macros_simple_form.html
@@ -2,6 +2,18 @@
 <div class="row mb-3">
     <label for="{{  field_name  }}" class="col-sm-2 col-form-label">{{ field_label }}</label>
     <div class="col-sm-10">
+        <input type="text" name="{{  field_name  }}" value="{{ field_value }}" class="form-control" {% if autofocus %} autofocus {% endif %} autocomplete="off">
+        {% if form.errors.get(field_name) %}
+        <p style="color: red;">{{ form.errors.get(field_name) }}</p>
+        {% endif %}
+    </div>
+</div>
+{% endmacro %}
+
+{% macro text_box_upper_case(form, field_label, field_name, field_value, autofocus=False) %}
+<div class="row mb-3">
+    <label for="{{  field_name  }}" class="col-sm-2 col-form-label">{{ field_label }}</label>
+    <div class="col-sm-10">
         <input type="text" name="{{  field_name  }}" value="{{ field_value }}" class="form-control upper-case" {% if autofocus %} autofocus {% endif %} autocomplete="off">
         {% if form.errors.get(field_name) %}
         <p style="color: red;">{{ form.errors.get(field_name) }}</p>
