--- a/application/templates/navbar.html
+++ b/application/templates/navbar.html
@@ -8,7 +8,7 @@
         <ul class="navbar-nav">
 
           {% if current_user.is_active %}
-
+            {% include 'bank/navbar.html' %}
             
             <!-- Options -->
             <li class="nav-item dropdown">
